[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huabus"
dynamic = ["version"]
description = "Huawei Solar Modbus via MQTT and Auto-Discovery"
authors = [{ name = "arboeh", email = "arend.boehmer@web.de" }]
readme = "README-PRODUCTION.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]
dependencies = [
    "huawei-solar>=2.5,<2.6",
    "pymodbus>=3.12,<3.13",
    "paho-mqtt>=2.1,<2.2",
]

[tool.hatch.version]
path = "huawei_solar_modbus_mqtt/bridge/version.py"
pattern = 'version = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["huawei_solar_modbus_mqtt"]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=7,<8",
    "pytest-mock>=3.15,<4",
    "mypy>=1.14,<2",
    "ruff>=0.9,<1",
    "pre-commit>=4,<5",
]

[project.urls]
Homepage = "https://github.com/arboeh/huABus"
Repository = "https://github.com/arboeh/huABus"
Issues = "https://github.com/arboeh/huABus/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["huawei_solar_modbus_mqtt/bridge"]
omit = ["*/tests/*", "*/venv/*", "*/__version__.py"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if not TYPE_CHECKING:",
    "@overload",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pymodbus.*", "huaweisolar.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["N802"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
